# bbCraft

./: .gitignore  .travis.yml  LICENSE  README.md  build.bat  build.sh
cpp-examples/: Makefile  server.cpp
rust-examples/: Cargo.toml
rust-examples/src/: lib.rs
server/mc_server_impl/: .gitignore  Cargo.toml  build.rs
server/mc_server_impl/res/: config.toml
server/mc_server_impl/src/: main.rs
server/mc_server_impl/src/api/: config.rs  mod.rs
server/mc_server_impl/src/cli/: mod.rs
server/mc_server_impl/src/net/: connection.rs  encryption.rs  handshake.rs  mod.rs  packet.rs
server/mc_server_impl/src/net/io/: mod.rs  read.rs
server/mc_server_impl/src/util/: hash.rs  mod.rs  ssl.rs
src/: main.rs
src/net/: connection.rs  handshake.rs  packet.rs
src/net/io/: read.rs
