[package]
name = "bbcraft"
version = "0.1.0"
authors = ["RoccoDev <roccodev.business@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
link = "server"

[dependencies]
byteorder = "1.3.1"
bit_utils = "0.1.1"
mc-varint = {git = "https://github.com/luojia65/mc-varint.git"}
toml = "0.5.0"
serde = "1.0.90"
serde_derive = "1.0.90"
libc = "0.2.51"

[build-dependencies]
walkdir = "2.2.7"