[package]
name = "bbcraft"
version = "0.1.0"
authors = ["RoccoDev <roccodev.business@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"

[dependencies]
byteorder = "1.3.1"
bit_utils = "0.1.1"
mc-varint = {git = "https://github.com/luojia65/mc-varint.git"}
toml = "0.5.0"
serde = "1.0.90"
serde_derive = "1.0.90"
libc = "0.2.51"
sha1 = "0.6.0"
num-bigint = "0.2.2"
rustc-serialize = "0.3.24"
regex = "1.1.8"
openssl = "0.10.23"
lazy_static = "1.3.0"
rand = "0.7.0"
reqwest = "0.9.18"